Implemented some Sequential Search

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -95,35 +95,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AbstractSet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mSequentialSearchSet\u001b[39;00m(AbstractSet):\n\u001b[0;32m      2\u001b[0m     \u001b[39m@abstractmethod\u001b[39m\n\u001b[0;32m      3\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m      4\u001b[0m         \u001b[39m# ADD YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      5\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m7\u001b[39m,\u001b[39m8\u001b[39m,\u001b[39m9\u001b[39m,\u001b[39m10\u001b[39m]        \n",
+      "\u001b[1;31mNameError\u001b[0m: name 'AbstractSet' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class SequentialSearchSet(AbstractSet):\n",
-    "    \n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
-    "\n",
-    "        \n",
-    "        pass           \n",
+    "        self.data = [1,2,3,4,5,6,7,8,9,10]        \n",
     "     \n",
-    "    \n",
-    "        \n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "      \n",
-    "        \n",
-    "        return inserted\n",
-    "    \n",
-    "    \n",
+    "        mid = len(self.data)//2\n",
+    "        if mid == 0:\n",
+    "            self.data.insert(mid, element)\n",
+    "        elif self.data[mid] > element:\n",
+    "            self.insertElement(self.data[:mid], element)\n",
+    "        else: \n",
+    "            self.insertElement(self.data[mid:], element)\n",
+    "        return inserted  \n",
     "\n",
     "    def searchElement(self, element):     \n",
     "        found = False\n",
     "        # ADD YOUR CODE HERE\n",
+    "        for i in range (len(self.data)):\n",
+    "            if self.data[i] == element:\n",
+    "                found = True\n",
+    "                break\n",
+    "        print(found)\n",
+    "        return found\n",
     "\n",
-    "        \n",
-    "        return found    "
+    "test = SequentialSearchSet()\n",
+    "test.insertElement(11)\n",
+    "test.insertElement(4)\n",
+    "test.searchElement(10)\n"
    ]
   },
   {
@@ -317,7 +335,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -332,6 +350,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ab6a3bf97e9dc6433b66ad95a799cf7bb97ea8ec99d5f81f0a819aa6af50afe0"
+   }
   }
  },
  "nbformat": 4,
