"edit binary search tree and make some changes"

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,19 +95,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'AbstractSet' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mSequentialSearchSet\u001b[39;00m(AbstractSet):\n\u001b[0;32m      2\u001b[0m     \u001b[39m@abstractmethod\u001b[39m\n\u001b[0;32m      3\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m      4\u001b[0m         \u001b[39m# ADD YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      5\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m7\u001b[39m,\u001b[39m8\u001b[39m,\u001b[39m9\u001b[39m,\u001b[39m10\u001b[39m]        \n",
-      "\u001b[1;31mNameError\u001b[0m: name 'AbstractSet' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+      "True\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+      "True\n",
+      "False\n",
+      "True\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -119,14 +130,25 @@
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "        mid = len(self.data)//2\n",
-    "        if mid == 0:\n",
-    "            self.data.insert(mid, element)\n",
-    "        elif self.data[mid] > element:\n",
-    "            self.insertElement(self.data[:mid], element)\n",
-    "        else: \n",
-    "            self.insertElement(self.data[mid:], element)\n",
-    "        return inserted  \n",
+    "        # mid = len(self.data)//2\n",
+    "        # if mid == 0:\n",
+    "        #     self.data.insert(mid, element)\n",
+    "        # elif self.data[mid] > element:\n",
+    "        #     self.insertElement(self.data[:mid], element)\n",
+    "        # else: \n",
+    "        #     self.insertElement(self.data[mid:], element)\n",
+    "        # return inserted\n",
+    "        if element in self.data:\n",
+    "            print(inserted)\n",
+    "            return inserted\n",
+    "        else:\n",
+    "            self.data.append(element)\n",
+    "            self.data.sort()\n",
+    "            print(self.data)\n",
+    "            inserted = True\n",
+    "            print(inserted)\n",
+    "            return inserted\n",
+    "          \n",
     "\n",
     "    def searchElement(self, element):     \n",
     "        found = False\n",
@@ -140,6 +162,7 @@
     "\n",
     "test = SequentialSearchSet()\n",
     "test.insertElement(11)\n",
+    "# test.insertElement(0)\n",
     "test.insertElement(4)\n",
     "test.searchElement(10)\n"
    ]
@@ -161,7 +184,8 @@
     "    \n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
-    "\n",
+    "        self.root = None\n",
+    "        \n",
     "        \n",
     "        pass           \n",
     "     \n",
@@ -170,7 +194,29 @@
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "      \n",
+    "        if self.root is None:\n",
+    "            self.root = {'val': element, 'left': None, 'right': None}\n",
+    "            inserted = True\n",
+    "        else:\n",
+    "            current = self.root\n",
+    "            while current is not None:\n",
+    "                if current['val'] == element:\n",
+    "                    inserted = False\n",
+    "                    break\n",
+    "                elif current['val'] > element:\n",
+    "                    if current['left'] is None:\n",
+    "                        current['left'] = {'val': element, 'left': None, 'right': None}\n",
+    "                        inserted = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        current = current['left']\n",
+    "                else:\n",
+    "                    if current['right'] is None:\n",
+    "                        current['right'] = {'val': element, 'left': None, 'right': None}\n",
+    "                        inserted = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        current = current['right']\n",
     "        \n",
     "        return inserted\n",
     "    \n",
@@ -179,7 +225,15 @@
     "    def searchElement(self, element):     \n",
     "        found = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "\n",
+    "        current = self.root\n",
+    "        while current is not None:\n",
+    "            if current['val'] == element:\n",
+    "                found = True\n",
+    "                break\n",
+    "            elif current['val'] > element:\n",
+    "                    current = current['left']\n",
+    "            else:\n",
+    "                    current = current['right']\n",
     "        \n",
     "        return found    "
    ]
@@ -353,7 +407,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ab6a3bf97e9dc6433b66ad95a799cf7bb97ea8ec99d5f81f0a819aa6af50afe0"
+    "hash": "ba35fb1a679a2b18afe276dc9e52956e1aafbed90aaf57dfd633ccfb24a25773"
    }
   }
  },
