add changes to binary search tree and support data structure

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ADD AUXILIARY DATA STRUCTURE DEFINITIONS AND HELPER CODE HERE\n",
-    "\n"
+    "\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        self.left = None\n",
+    "        self.right = None"
    ]
   },
   {
@@ -176,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +240,56 @@
     "            else:\n",
     "                    current = current['right']\n",
     "        \n",
-    "        return found    "
+    "        return found\n",
+    "    \n",
+    "# binary search tree need TreeNode\n",
+    "class BinarySearchTreeSet(AbstractSet):\n",
+    "    def __init__(self):\n",
+    "        self.root = None\n",
+    "        self.size = 0\n",
+    "        \n",
+    "    def insertElement(self, element):\n",
+    "        inserted = False\n",
+    "        if self.root is None:\n",
+    "            self.root = TreeNode(element)\n",
+    "            self.size += 1\n",
+    "            inserted = True\n",
+    "        else:\n",
+    "            current = self.root\n",
+    "            while True:\n",
+    "                if element < current.val:\n",
+    "                    if current.left is None:\n",
+    "                        current.left = TreeNode(element)\n",
+    "                        self.size += 1\n",
+    "                        inserted = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        current = current.left\n",
+    "                elif element > current.val:\n",
+    "                    if current.right is None:\n",
+    "                        current.right = TreeNode(element)\n",
+    "                        self.size += 1\n",
+    "                        inserted = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        current = current.right\n",
+    "                else:\n",
+    "                    # element is already in the tree\n",
+    "                    break\n",
+    "        return inserted\n",
+    "    \n",
+    "    def searchElement(self, element):\n",
+    "        found = False\n",
+    "        current = self.root\n",
+    "        while current is not None:\n",
+    "            if element == current.val:\n",
+    "                found = True\n",
+    "                return found\n",
+    "            elif element < current.val:\n",
+    "                current = current.left\n",
+    "            else:\n",
+    "                current = current.right\n",
+    "        return found"
    ]
   },
   {
