--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -95,26 +95,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'AbstractSet' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mSequentialSearchSet\u001b[39;00m(AbstractSet):\n\u001b[0;32m      2\u001b[0m     \u001b[39m@abstractmethod\u001b[39m\n\u001b[0;32m      3\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m      4\u001b[0m         \u001b[39m# ADD YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      5\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m7\u001b[39m,\u001b[39m8\u001b[39m,\u001b[39m9\u001b[39m,\u001b[39m10\u001b[39m]        \n",
-      "\u001b[1;31mNameError\u001b[0m: name 'AbstractSet' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class AbstractSet(ABC):\n",
+    "    @abstractmethod\n",
+    "    def __init__(self):\n",
+    "        self.set = []\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def insertElement(self, element):     \n",
+    "        inserted = False\n",
+    "        if element not in self.set:\n",
+    "            self.set.append(element)\n",
+    "            inserted = True\n",
+    "        return inserted\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def searchElement(self, element):\n",
+    "        found = False\n",
+    "        if element in self.set:\n",
+    "            found = True\n",
+    "        return found       \n",
+    "    \n",
+    "# abstract class to represent a synthetic data generator\n",
+    "class AbstractTestDataGenerator(ABC):\n",
+    "    \n",
+    "    # constructor\n",
+    "    @abstractmethod\n",
+    "    def __init__(self):\n",
+    "        pass           \n",
+    "        \n",
+    "    # creates and returns a list of length \"size\" of strings\n",
+    "    # size : int\n",
+    "    # data : list<str>\n",
+    "    @abstractmethod\n",
+    "    def generateData(self, size):     \n",
+    "        data = [\"\"]*size\n",
+    "        return data   \n",
+    "\n",
+    "\n",
     "class SequentialSearchSet(AbstractSet):\n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
-    "        self.data = [1,2,3,4,5,6,7,8,9,10]        \n",
+    "        self.data = []        \n",
     "     \n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
@@ -135,13 +173,12 @@
     "            if self.data[i] == element:\n",
     "                found = True\n",
     "                break\n",
-    "        print(found)\n",
     "        return found\n",
     "\n",
-    "test = SequentialSearchSet()\n",
-    "test.insertElement(11)\n",
-    "test.insertElement(4)\n",
-    "test.searchElement(10)\n"
+    "search = SequentialSearchSet()\n",
+    "search.insertElement(1)\n",
+    "search.insertElement(2)\n",
+    "search.searchElement(2)\n"
    ]
   },
   {
