added print statement to improve code output

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -66,7 +66,7 @@
     "    @abstractmethod\n",
     "    def generateData(self, size):     \n",
     "        data = [\"\"]*size\n",
-    "        return data   \n"
+    "        return data\n"
    ]
   },
   {
@@ -100,19 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
-      "True\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
-      "True\n",
-      "False\n",
-      "True\n"
+      "10 False\n",
+      "11 True\n"
      ]
     },
     {
@@ -121,7 +117,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,23 +170,12 @@
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "        # mid = len(self.data)//2\n",
-    "        # if mid == 0:\n",
-    "        #     self.data.insert(mid, element)\n",
-    "        # elif self.data[mid] > element:\n",
-    "        #     self.insertElement(self.data[:mid], element)\n",
-    "        # else: \n",
-    "        #     self.insertElement(self.data[mid:], element)\n",
-    "        # return inserted\n",
     "        if element in self.data:\n",
-    "            print(inserted)\n",
     "            return inserted\n",
     "        else:\n",
     "            self.data.append(element)\n",
     "            self.data.sort()\n",
-    "            print(self.data)\n",
     "            inserted = True\n",
-    "            print(inserted)\n",
     "            return inserted\n",
     "          \n",
     "\n",
@@ -201,13 +186,15 @@
     "            if self.data[i] == element:\n",
     "                found = True\n",
     "                break\n",
+    "        print(element, found)\n",
     "        return found\n",
     "\n",
     "test = SequentialSearchSet()\n",
     "test.insertElement(11)\n",
-    "# test.insertElement(0)\n",
+    "test.insertElement(0)\n",
     "test.insertElement(4)\n",
-    "test.searchElement(10)\n"
+    "test.searchElement(10)\n",
+    "test.searchElement(11)\n"
    ]
   },
   {
@@ -219,9 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AbstractSet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mBinarySearchTreeSet\u001b[39;00m(AbstractSet):\n\u001b[0;32m      3\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m      4\u001b[0m         \u001b[39m# ADD YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      5\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mroot \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'AbstractSet' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class BinarySearchTreeSet(AbstractSet):\n",
     "    \n",
@@ -499,7 +498,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba35fb1a679a2b18afe276dc9e52956e1aafbed90aaf57dfd633ccfb24a25773"
+    "hash": "ab6a3bf97e9dc6433b66ad95a799cf7bb97ea8ec99d5f81f0a819aa6af50afe0"
    }
   }
  },
