--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,8 +386,9 @@
     "    \n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
-    "\n",
-    "        \n",
+    "        self.size = size\n",
+    "        self.hash_count = has_count\n",
+    "        self.bit_array = [0] * size\n",
     "        pass           \n",
     "     \n",
     "    \n",
@@ -395,18 +396,22 @@
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "      \n",
+    "        for seed in range(self.hash_count):\n",
+    "            result = mmh3.hash(string, seed) % self.size\n",
+    "            self.bit_array[result] = 1\n",
     "        \n",
+    "        inserted = True\n",
     "        return inserted\n",
     "    \n",
     "    \n",
     "\n",
     "    def searchElement(self, element):     \n",
-    "        found = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "\n",
-    "        \n",
-    "        return found    "
+    "        for seed in range(self.hash_count):\n",
+    "            result = mmh3.hash(string, seed) % self.size\n",
+    "            if self.bit_array[result] == 0:\n",
+    "                return False\n",
+    "        return True"
    ]
   },
   {
