add changes to binary search tree and show example how it work for the first type

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,19 +206,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'AbstractSet' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mBinarySearchTreeSet\u001b[39;00m(AbstractSet):\n\u001b[0;32m      3\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m      4\u001b[0m         \u001b[39m# ADD YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      5\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mroot \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'AbstractSet' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'val': 11, 'left': None, 'right': None}\n",
+      "True\n",
+      "{'val': 11, 'left': {'val': 0, 'left': None, 'right': None}, 'right': None}\n",
+      "True\n",
+      "{'val': 0, 'left': None, 'right': {'val': 4, 'left': None, 'right': None}}\n",
+      "True\n",
+      "False\n",
+      "11\n",
+      "True\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -239,6 +253,7 @@
     "        if self.root is None:\n",
     "            self.root = {'val': element, 'left': None, 'right': None}\n",
     "            inserted = True\n",
+    "            print(self.root)\n",
     "        else:\n",
     "            current = self.root\n",
     "            while current is not None:\n",
@@ -248,6 +263,7 @@
     "                elif current['val'] > element:\n",
     "                    if current['left'] is None:\n",
     "                        current['left'] = {'val': element, 'left': None, 'right': None}\n",
+    "                        print(current)\n",
     "                        inserted = True\n",
     "                        break\n",
     "                    else:\n",
@@ -255,11 +271,12 @@
     "                else:\n",
     "                    if current['right'] is None:\n",
     "                        current['right'] = {'val': element, 'left': None, 'right': None}\n",
+    "                        print(current)\n",
     "                        inserted = True\n",
     "                        break\n",
     "                    else:\n",
     "                        current = current['right']\n",
-    "        \n",
+    "        print(inserted)\n",
     "        return inserted\n",
     "    \n",
     "    \n",
@@ -270,63 +287,71 @@
     "        current = self.root\n",
     "        while current is not None:\n",
     "            if current['val'] == element:\n",
+    "                print(element)\n",
     "                found = True\n",
     "                break\n",
     "            elif current['val'] > element:\n",
     "                    current = current['left']\n",
     "            else:\n",
     "                    current = current['right']\n",
-    "        \n",
+    "        print(found)\n",
     "        return found\n",
     "    \n",
     "# binary search tree need TreeNode\n",
-    "class BinarySearchTreeSet(AbstractSet):\n",
-    "    def __init__(self):\n",
-    "        self.root = None\n",
-    "        self.size = 0\n",
+    "# class BinarySearchTreeSet(AbstractSet):\n",
+    "#     def __init__(self):\n",
+    "#         self.root = None\n",
+    "#         self.size = 0\n",
     "        \n",
-    "    def insertElement(self, element):\n",
-    "        inserted = False\n",
-    "        if self.root is None:\n",
-    "            self.root = TreeNode(element)\n",
-    "            self.size += 1\n",
-    "            inserted = True\n",
-    "        else:\n",
-    "            current = self.root\n",
-    "            while True:\n",
-    "                if element < current.val:\n",
-    "                    if current.left is None:\n",
-    "                        current.left = TreeNode(element)\n",
-    "                        self.size += 1\n",
-    "                        inserted = True\n",
-    "                        break\n",
-    "                    else:\n",
-    "                        current = current.left\n",
-    "                elif element > current.val:\n",
-    "                    if current.right is None:\n",
-    "                        current.right = TreeNode(element)\n",
-    "                        self.size += 1\n",
-    "                        inserted = True\n",
-    "                        break\n",
-    "                    else:\n",
-    "                        current = current.right\n",
-    "                else:\n",
-    "                    # element is already in the tree\n",
-    "                    break\n",
-    "        return inserted\n",
+    "#     def insertElement(self, element):\n",
+    "#         inserted = False\n",
+    "#         if self.root is None:\n",
+    "#             self.root = TreeNode(element)\n",
+    "#             self.size += 1\n",
+    "#             inserted = True\n",
+    "#         else:\n",
+    "#             current = self.root\n",
+    "#             while True:\n",
+    "#                 if element < current.val:\n",
+    "#                     if current.left is None:\n",
+    "#                         current.left = TreeNode(element)\n",
+    "#                         self.size += 1\n",
+    "#                         inserted = True\n",
+    "#                         break\n",
+    "#                     else:\n",
+    "#                         current = current.left\n",
+    "#                 elif element > current.val:\n",
+    "#                     if current.right is None:\n",
+    "#                         current.right = TreeNode(element)\n",
+    "#                         self.size += 1\n",
+    "#                         inserted = True\n",
+    "#                         break\n",
+    "#                     else:\n",
+    "#                         current = current.right\n",
+    "#                 else:\n",
+    "#                     # element is already in the tree\n",
+    "#                     break\n",
+    "#         return inserted\n",
     "    \n",
-    "    def searchElement(self, element):\n",
-    "        found = False\n",
-    "        current = self.root\n",
-    "        while current is not None:\n",
-    "            if element == current.val:\n",
-    "                found = True\n",
-    "                return found\n",
-    "            elif element < current.val:\n",
-    "                current = current.left\n",
-    "            else:\n",
-    "                current = current.right\n",
-    "        return found"
+    "#     def searchElement(self, element):\n",
+    "#         found = False\n",
+    "#         current = self.root\n",
+    "#         while current is not None:\n",
+    "#             if element == current.val:\n",
+    "#                 found = True\n",
+    "#                 return found\n",
+    "#             elif element < current.val:\n",
+    "#                 current = current.left\n",
+    "#             else:\n",
+    "#                 current = current.right\n",
+    "#         return found\n",
+    "\n",
+    "test = BinarySearchTreeSet()\n",
+    "test.insertElement(11)\n",
+    "test.insertElement(0)\n",
+    "test.insertElement(4)\n",
+    "test.searchElement(10)\n",
+    "test.searchElement(11)"
    ]
   },
   {
@@ -503,7 +528,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ab6a3bf97e9dc6433b66ad95a799cf7bb97ea8ec99d5f81f0a819aa6af50afe0"
+    "hash": "ba35fb1a679a2b18afe276dc9e52956e1aafbed90aaf57dfd633ccfb24a25773"
    }
   }
  },
