--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -363,35 +363,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "next roud\n",
+      "\n",
+      "5\n",
+      "cur: red\n",
+      "right: red\n",
+      "left shift\n",
+      "6\n",
+      "cur: red\n",
+      "left: red\n",
+      "top skip\n",
+      "True\n",
+      "next roud\n",
+      "\n",
+      "5\n",
+      "cur: red\n",
+      "left: red\n",
+      "right shift\n",
+      "5\n",
+      "cur: red\n",
+      "left: red\n",
+      "right: red\n",
+      "shift color\n",
+      "top skip\n",
+      "True\n",
+      "next roud\n",
+      "\n",
+      "6\n",
+      "cur: black\n",
+      "right: red\n",
+      "left shift\n",
+      "7\n",
+      "cur: black\n",
+      "left: red\n",
+      "5\n",
+      "cur: red\n",
+      "left: black\n",
+      "right: black\n",
+      "top skip\n",
+      "True\n",
+      "next roud\n",
+      "\n",
+      "7\n",
+      "cur: black\n",
+      "left: red\n",
+      "right: red\n",
+      "shift color\n",
+      "5\n",
+      "cur: red\n",
+      "left: black\n",
+      "right: red\n",
+      "left shift\n",
+      "7\n",
+      "cur: red\n",
+      "left: red\n",
+      "right: black\n",
+      "top skip\n",
+      "True\n",
+      "next roud\n",
+      "\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "class BalancedSearchTreeSet(AbstractSet):\n",
+    "class TreeNode():\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.top = None\n",
+    "        self.color = \"red\"\n",
+    "\n",
+    "\n",
+    "class BalancedSearchTreeSet():\n",
     "    \n",
     "    def __init__(self):\n",
-    "        # ADD YOUR CODE HERE\n",
-    "\n",
-    "        \n",
-    "        pass           \n",
+    "        self.root = None       \n",
     "     \n",
     "    \n",
     "        \n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
-    "        # ADD YOUR CODE HERE\n",
-    "      \n",
-    "        \n",
-    "        return inserted\n",
-    "    \n",
-    "    \n",
+    "        if self.root is None:\n",
+    "            self.root = TreeNode(element)\n",
+    "            inserted = True\n",
+    "            return inserted\n",
+    "        else:\n",
+    "            currentNode = self.root\n",
+    "            while True:\n",
+    "                if currentNode.value == element:\n",
+    "                    return inserted\n",
+    "                elif currentNode.value > element:\n",
+    "                    if currentNode.left is None:\n",
+    "                        currentNode.left = TreeNode(element)\n",
+    "                        currentNode.left.top = currentNode\n",
+    "                        inserted = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        currentNode = currentNode.left\n",
+    "                else:\n",
+    "                    if currentNode.right is None:\n",
+    "                        currentNode.right = TreeNode(element)\n",
+    "                        currentNode.right.top = currentNode\n",
+    "                        inserted = True\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        currentNode = currentNode.right\n",
+    "            while True:\n",
+    "                print(currentNode.value)\n",
+    "                print(\"cur: \"+currentNode.color)\n",
+    "                if currentNode.left is not None:\n",
+    "                    print(\"left: \"+currentNode.left.color)\n",
+    "                if currentNode.right is not None:\n",
+    "                    print(\"right: \"+currentNode.right.color)\n",
+    "                if (currentNode.left is None or currentNode.left.color == \"black\") and currentNode.right is not None and currentNode.right.color == \"red\":\n",
+    "                    print(\"left shift\")\n",
+    "                    tampNode= currentNode.right\n",
+    "                    if tampNode.left is not None:\n",
+    "                        currentNode.right = tampNode.left\n",
+    "                        tampNode.left.top = currentNode\n",
+    "                    else:\n",
+    "                        currentNode.right = None\n",
+    "                    if currentNode.top is not None:\n",
+    "                        topNode = currentNode.top\n",
+    "                        if topNode.left == currentNode:\n",
+    "                            topNode.left = tampNode\n",
+    "                        else:\n",
+    "                            topNode.right = tampNode\n",
+    "                    elif currentNode == self.root:\n",
+    "                        self.root = tampNode\n",
+    "                    tampNode.left = currentNode\n",
+    "                    tampNode.top = currentNode.top\n",
+    "                    currentNode.top = tampNode\n",
+    "                    tampNode.color = currentNode.color\n",
+    "                    currentNode.color = \"red\"\n",
+    "                if currentNode.left is not None and currentNode.left.color == \"red\" and currentNode.right is not None and currentNode.right.color == \"red\":\n",
+    "                    print(\"shift color\")\n",
+    "                    currentNode.left.color = \"black\"\n",
+    "                    currentNode.right.color = \"black\"\n",
+    "                    currentNode.color = \"red\"\n",
+    "                if currentNode.top is None:\n",
+    "                    print(\"top skip\")\n",
+    "                    break\n",
+    "                if currentNode.color == \"red\" and currentNode.left is not None and currentNode.left.color == \"red\":\n",
+    "                    print(\"right shift\")\n",
+    "                    rightNode = currentNode.top\n",
+    "                    if rightNode.top is not None:\n",
+    "                        topNode = rightNode.top\n",
+    "                        if topNode.left == rightNode:\n",
+    "                            topNode.left = currentNode\n",
+    "                        else:\n",
+    "                            topNode.right = currentNode\n",
+    "                    if rightNode == self.root:\n",
+    "                        self.root = currentNode\n",
+    "                    currentNode.right = rightNode\n",
+    "                    rightNode.left = None\n",
+    "                    currentNode.top = rightNode.top\n",
+    "                    rightNode.top = currentNode\n",
+    "                    continue\n",
+    "                currentNode = currentNode.top\n",
+    "            return inserted\n",
+    "\n",
     "\n",
     "    def searchElement(self, element):     \n",
     "        found = False\n",
-    "        # ADD YOUR CODE HERE\n",
+    "        currentNode = self.root\n",
+    "        while currentNode is not None:\n",
+    "            if currentNode.value == element:\n",
+    "                found = True\n",
+    "                return found\n",
+    "            elif currentNode.value > element:\n",
+    "                currentNode = currentNode.left\n",
+    "            else:\n",
+    "                currentNode = currentNode.right\n",
+    "        return found \n",
     "\n",
-    "        \n",
-    "        return found    "
+    "b = BalancedSearchTreeSet()\n",
+    "print(b.insertElement(5))\n",
+    "print(\"next roud\\n\")\n",
+    "print(b.insertElement(6))\n",
+    "print(\"next roud\\n\")\n",
+    "print(b.insertElement(4))\n",
+    "print(\"next roud\\n\")\n",
+    "print(b.insertElement(7))\n",
+    "print(\"next roud\\n\")\n",
+    "print(b.insertElement(8))\n",
+    "print(\"next roud\\n\")\n",
+    "print(b.searchElement(5))\n",
+    "print(b.searchElement(7))\n",
+    "print(b.searchElement(10))    "
    ]
   },
   {
@@ -524,11 +695,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0rc2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba35fb1a679a2b18afe276dc9e52956e1aafbed90aaf57dfd633ccfb24a25773"
+    "hash": "b8a697e661a1e86d21efc8e86af240976bc25e7e11fdab9f639639098921a644"
    }
   }
  },
