--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -78,17 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ADD AUXILIARY DATA STRUCTURE DEFINITIONS AND HELPER CODE HERE\n",
     "\n",
-    "class TreeNode:\n",
-    "    def __init__(self, val):\n",
-    "        self.val = val\n",
+    "class TreeNode():\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
     "        self.left = None\n",
-    "        self.right = None"
+    "        self.right = None\n",
+    "        self.top = None\n",
+    "        self.color = \"red\""
    ]
   },
   {
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +119,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +243,6 @@
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
     "        self.root = None\n",
-    "        \n",
-    "        \n",
     "        pass           \n",
     "     \n",
     "    \n",
@@ -312,7 +312,7 @@
     "#         else:\n",
     "#             current = self.root\n",
     "#             while True:\n",
-    "#                 if element < current.val:\n",
+    "#                 if element < current.value:\n",
     "#                     if current.left is None:\n",
     "#                         current.left = TreeNode(element)\n",
     "#                         self.size += 1\n",
@@ -320,7 +320,7 @@
     "#                         break\n",
     "#                     else:\n",
     "#                         current = current.left\n",
-    "#                 elif element > current.val:\n",
+    "#                 elif element > current.value:\n",
     "#                     if current.right is None:\n",
     "#                         current.right = TreeNode(element)\n",
     "#                         self.size += 1\n",
@@ -337,10 +337,10 @@
     "#         found = False\n",
     "#         current = self.root\n",
     "#         while current is not None:\n",
-    "#             if element == current.val:\n",
+    "#             if element == current.value:\n",
     "#                 found = True\n",
     "#                 return found\n",
-    "#             elif element < current.val:\n",
+    "#             elif element < current.value:\n",
     "#                 current = current.left\n",
     "#             else:\n",
     "#                 current = current.right\n",
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -388,15 +388,6 @@
     }
    ],
    "source": [
-    "class TreeNode():\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "        self.left = None\n",
-    "        self.right = None\n",
-    "        self.top = None\n",
-    "        self.color = \"red\"\n",
-    "\n",
-    "\n",
     "class BalancedSearchTreeSet():\n",
     "    \n",
     "    def __init__(self):\n",
@@ -513,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,11 +625,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.10.7"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b8a697e661a1e86d21efc8e86af240976bc25e7e11fdab9f639639098921a644"
+    "hash": "ba35fb1a679a2b18afe276dc9e52956e1aafbed90aaf57dfd633ccfb24a25773"
    }
   }
  },
