--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -208,33 +208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'val': 11, 'left': None, 'right': None}\n",
       "True\n",
-      "{'val': 11, 'left': {'val': 0, 'left': None, 'right': None}, 'right': None}\n",
       "True\n",
-      "{'val': 0, 'left': None, 'right': {'val': 4, 'left': None, 'right': None}}\n",
       "True\n",
       "False\n",
-      "11\n",
       "True\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -253,7 +239,6 @@
     "        if self.root is None:\n",
     "            self.root = {'val': element, 'left': None, 'right': None}\n",
     "            inserted = True\n",
-    "            print(self.root)\n",
     "        else:\n",
     "            current = self.root\n",
     "            while current is not None:\n",
@@ -263,7 +248,6 @@
     "                elif current['val'] > element:\n",
     "                    if current['left'] is None:\n",
     "                        current['left'] = {'val': element, 'left': None, 'right': None}\n",
-    "                        print(current)\n",
     "                        inserted = True\n",
     "                        break\n",
     "                    else:\n",
@@ -271,12 +255,10 @@
     "                else:\n",
     "                    if current['right'] is None:\n",
     "                        current['right'] = {'val': element, 'left': None, 'right': None}\n",
-    "                        print(current)\n",
     "                        inserted = True\n",
     "                        break\n",
     "                    else:\n",
     "                        current = current['right']\n",
-    "        print(inserted)\n",
     "        return inserted\n",
     "    \n",
     "    \n",
@@ -287,14 +269,12 @@
     "        current = self.root\n",
     "        while current is not None:\n",
     "            if current['val'] == element:\n",
-    "                print(element)\n",
     "                found = True\n",
     "                break\n",
     "            elif current['val'] > element:\n",
     "                    current = current['left']\n",
     "            else:\n",
     "                    current = current['right']\n",
-    "        print(found)\n",
     "        return found\n",
     "    \n",
     "# binary search tree need TreeNode\n",
@@ -347,11 +327,11 @@
     "#         return found\n",
     "\n",
     "test = BinarySearchTreeSet()\n",
-    "test.insertElement(11)\n",
-    "test.insertElement(0)\n",
-    "test.insertElement(4)\n",
-    "test.searchElement(10)\n",
-    "test.searchElement(11)"
+    "print(test.insertElement(11))\n",
+    "print(test.insertElement(0))\n",
+    "print(test.insertElement(4))\n",
+    "print(test.searchElement(10))\n",
+    "print(test.searchElement(11))"
    ]
   },
   {
