--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ADD AUXILIARY DATA STRUCTURE DEFINITIONS AND HELPER CODE HERE\n",
     "\n",
-    "class TreeNode():\n",
+    "class TreeNode_BalancedSearchTree():\n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.left = None\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        if self.root is None:\n",
-    "            self.root = TreeNode(element)\n",
+    "            self.root = TreeNode_BalancedSearchTree(element)\n",
     "            inserted = True\n",
     "            return inserted\n",
     "        else:\n",
@@ -388,7 +388,7 @@
     "                    return inserted\n",
     "                elif currentNode.value > element:\n",
     "                    if currentNode.left is None:\n",
-    "                        currentNode.left = TreeNode(element)\n",
+    "                        currentNode.left = TreeNode_BalancedSearchTree(element)\n",
     "                        currentNode.left.top = currentNode\n",
     "                        inserted = True\n",
     "                        break\n",
@@ -396,7 +396,7 @@
     "                        currentNode = currentNode.left\n",
     "                else:\n",
     "                    if currentNode.right is None:\n",
-    "                        currentNode.right = TreeNode(element)\n",
+    "                        currentNode.right = TreeNode_BalancedSearchTree(element)\n",
     "                        currentNode.right.top = currentNode\n",
     "                        inserted = True\n",
     "                        break\n",
@@ -442,8 +442,10 @@
     "                            topNode.right = currentNode\n",
     "                    if rightNode == self.root:\n",
     "                        self.root = currentNode\n",
+    "                    rightNode.left = currentNode.right\n",
+    "                    if currentNode.right is not None:\n",
+    "                        currentNode.right.top = rightNode\n",
     "                    currentNode.right = rightNode\n",
-    "                    rightNode.left = None\n",
     "                    currentNode.top = rightNode.top\n",
     "                    rightNode.top = currentNode\n",
     "                    continue\n",
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,11 +607,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0rc2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba35fb1a679a2b18afe276dc9e52956e1aafbed90aaf57dfd633ccfb24a25773"
+    "hash": "b8a697e661a1e86d21efc8e86af240976bc25e7e11fdab9f639639098921a644"
    }
   }
  },
