--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
     "                        currentNode = currentNode.right\n",
     "            while True:\n",
     "                if (currentNode.left is None or currentNode.left.color == \"black\") and currentNode.right is not None and currentNode.right.color == \"red\":\n",
-    "                    print(\"left shift\")\n",
+    "                    print(\"left rotation\")\n",
     "                    tampNode= currentNode.right\n",
     "                    if tampNode.left is not None:\n",
     "                        currentNode.right = tampNode.left\n",
@@ -432,7 +432,7 @@
     "                if currentNode.top is None:\n",
     "                    break\n",
     "                if currentNode.color == \"red\" and currentNode.left is not None and currentNode.left.color == \"red\":\n",
-    "                    print(\"right shift\")\n",
+    "                    print(\"right rotation\")\n",
     "                    rightNode = currentNode.top\n",
     "                    if rightNode.top is not None:\n",
     "                        topNode = rightNode.top\n",
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
